fixing z-index for top-nav, modal and off-canvas

--- a/source/_sass/_header.scss
+++ b/source/_sass/_header.scss
@@ -61,10 +61,6 @@
     }
   }
 
-  &--logo {
-
-  }
-
   &__logo {
     z-index: 10;
     position: relative;
