--- a/source/_sass/_modals.scss
+++ b/source/_sass/_modals.scss
@@ -1,3 +1,8 @@
+// ADD to styleguide
+.modal {
+  z-index: 1000;
+}
+
 // Move to styleguide
 .floating-button {
   position: relative;
